--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- navigation -->
 <header>
     <link rel="run-buddy style" href="run-" />
-    <a href="">RUN BUDDY</a>
+    <a href="">RuN BUDDY</a>
   <nav>
       <!--Unordered list element-->
       <ul>
