--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
     <!-- "what you do" end -->
 
-    <!-- "meet the trainers" start -->
+    <!-- "meet the trainers" start --->
     <section id="your-trainers">
       <div class="flex-row">
         <h2 class="section-title primary-border">
